--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/directory
+spring.datasource.url=jdbc:postgresql://localhost:5432/directory
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=false
@@ -7,4 +7,3 @@ spring.jpa.hibernate.ddl-auto=validate
 
 #view resolver
 spring.mvc.view.prefix=/views/
-spring.mvc.view.suffix= .jsp
