--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'javax.servlet:jstl:1.2'
     runtimeOnly 'org.postgresql:postgresql'
-    runtimeOnly('javax.xml.bind:jaxb-api:2.4.0-b180830.0359')
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
     compile group: 'org.apache.poi', name: 'poi', version: '3.12'
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.12'
